Construimos servidor de producción - Minificamos CSS y JS - Quitamos toda funcionalidad CSS de Bootstrap no útil

--- a/app/stylesheets/main.styl
+++ b/app/stylesheets/main.styl
@@ -18,10 +18,10 @@ body
 .blog-post
   .blog-post-header
     h1
-      font-family 'Raleway
+      font-family 'Raleway'
 
 .comments
-
+    font-family 'Raleway'
   .comments-list
     list-style-type none
 
