--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -23,23 +23,25 @@ body {
   padding: 0 0 0.25em 0;
   border-bottom: 1px solid #ddd;
 }
-.blog-post .blog-post-header h1 font-family 'Raleway
-
-.comments
-
-  .comments-list
-    list-style-type none
-
-    .comment-item
-      border 1px solid b_silver
-      border-radius 5px
-      padding .5em
-      margin .5em
-
-      .comment-author
-        font-family 'Raleway' {
+.blog-post .blog-post-header h1 {
+  font-family: 'Raleway';
+}
+.comments {
+  font-family: 'Raleway';
+}
+.comments-list {
+  list-style-type: none;
+}
+.comments-list .comment-item {
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 0.5em;
+  margin: 0.5em;
+}
+.comments-list .comment-item .comment-author {
+  font-family: 'Raleway';
   font-weight: bold;
 }
-.blog-post .blog-post-header h1 .comment-body {
+.comments-list .comment-item .comment-body {
   font-style: italic;
 }
